Agregamos carpetas y parrafos en algunos archivos

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 <body>
     <h1>Hola Mundo</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque temporibus eaque assumenda tenetur id illo vitae eum ea corrupti ipsam. Autem tempore nemo eos labore. Unde, iste repellendus? Dolorem, commodi.</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque temporibus eaque assumenda tenetur id illo vitae eum ea corrupti ipsam. Autem tempore nemo eos labore. Unde, iste repellendus? Dolorem, commodi.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque temporibus eaque assumenda tenetur id illo vitae eum ea corrupti ipsam. Autem tempore nemo eos labore. Unde, iste repellendus? Dolorem, commodi.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque temporibus eaque assumenda tenetur id illo vitae eum ea corrupti ipsam. Autem tempore nemo eos labore. Unde, iste repellendus? Dolorem, commodi.</p>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, rerum. Eligendi, ducimus, molestias sint, minus repellendus quidem consectetur vero natus harum ad quisquam nesciunt nihil placeat dignissimos! Tenetur, nesciunt. Eligendi!</p>
 </body>
 </html>
